@@ -301,6 +301,7 @@
          typeHandler="ibatortest.execute.miscellaneous.MyTimeTypeHandler"/>
     </table>
     <table tableName="RegexRename">
+      <generatedKey column="CUST_ID" sqlStatement="call next value for TestSequence" type="pre" />
       <columnRenamingRule searchString="^CUST" />
     </table>
   </ibatorContext>
